<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!--
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc
	 *	@file 		android_mobile___1
	 *	@date 		0
	 *	@title 		Android Mobile  1
	 *	@author
	 *	@keywords
	 *	@generator 	Export Kit v1.3.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/android_mobile___1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View android:id="@+id/_bg__android_mobile___1"
				android:background="@drawable/_bg__android_mobile___1_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="640dp" />

			<View android:id="@+id/rectangle_1_copy"
				android:background="@drawable/rectangle_1_copy_shape"
				 android:alpha="0.0314"
				 android:layout_marginLeft="0.19411468505859dp"
				 android:layout_marginStart="0.19411468505859dp"
				android:layout_marginTop="374.77725219727dp"
				android:layout_width="359.84533691406dp"
				android:layout_height="45.446044921875dp" />

			<ImageView android:id="@+id/shape_3_copy_6"
				android:src="@drawable/shape_3_copy_6"
				android:contentDescription="shape_3_copy_6"
				 android:layout_marginLeft="0.67024224996567dp"
				 android:layout_marginStart="0.67024224996567dp"
				android:layout_marginTop="419.03436279297dp"
				android:layout_width="359.36923217773dp"
				android:layout_height="1dp" />

			<TextView android:id="@+id/__"
				android:fontFamily="Font Awesome 5 Free"
				android:textSize="26sp"
				android:textColor="@color/___color"
				android:layout_marginLeft="325.40377807617dp"
				android:layout_marginTop="385.01406860352dp"
				android:layout_width="31dp"
				android:layout_height="31dp"
				android:text="@string/___string"
				 />

			<View android:id="@+id/rounded_rectangle_1"
				android:background="@drawable/rounded_rectangle_1_shape"
				 android:layout_marginLeft="162.89530944824dp"
				 android:layout_marginStart="162.89530944824dp"
				android:layout_marginTop="380.67999267578dp"
				android:layout_width="78dp"
				android:layout_height="35dp" />

			<View android:id="@+id/rounded_rectangle_2"
				android:background="@drawable/rounded_rectangle_2_shape"
				 android:layout_marginLeft="83.762756347656dp"
				 android:layout_marginStart="83.762756347656dp"
				android:layout_marginTop="380.67999267578dp"
				android:layout_width="78dp"
				android:layout_height="35dp" />

			<View android:id="@+id/rounded_rectangle_2_copy"
				android:background="@drawable/rounded_rectangle_2_copy_shape"
				 android:layout_marginLeft="244.74095153809dp"
				 android:layout_marginStart="244.74095153809dp"
				android:layout_marginTop="380.67999267578dp"
				android:layout_width="78.000015258789dp"
				android:layout_height="35dp" />

			<View android:id="@+id/rounded_rectangle_2_copy_2"
				android:background="@drawable/rounded_rectangle_2_copy_2_shape"
				 android:layout_marginLeft="0.67024230957031dp"
				 android:layout_marginStart="0.67024230957031dp"
				android:layout_marginTop="380.68176269531dp"
				android:layout_width="78dp"
				android:layout_height="35dp" />

			<TextView android:id="@+id/home"
				android:fontFamily="Franklin Gothic Book"
				android:textSize="27sp"
				android:textColor="@color/home_color"
				android:layout_marginLeft="115.45645904541dp"
				android:layout_marginTop="155.59756469727dp"
				android:layout_width="71.999992370605dp"
				android:layout_height="36dp"
				android:text="@string/home_string"
				 />

			<ImageView android:id="@+id/separator2"
				android:src="@drawable/separator2"
				android:contentDescription="separator2"
				 android:layout_marginLeft="22.675420761108dp"
				 android:layout_marginStart="22.675420761108dp"
				android:layout_marginTop="485.96081542969dp"
				android:layout_width="301.20001220703dp"
				android:layout_height="1.78466796875dp" />


			<RelativeLayout android:id="@+id/group_1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="-0.31504058837891dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/path_1"
					android:src="@drawable/path_1"
					android:contentDescription="path_1"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="359.84533691406dp"
					android:layout_height="73.076782226562dp" />

			</RelativeLayout>

			<TextView android:id="@+id/___ek1"
				android:fontFamily="Font Awesome 5 Free"
				android:textSize="27sp"
				android:textColor="@color/___ek1_color"
				android:layout_marginLeft="12.732238769531dp"
				android:layout_marginTop="17.374969482422dp"
				android:layout_width="32dp"
				android:layout_height="32dp"
				android:text="@string/___ek1_string"
				 />

			<TextView android:id="@+id/___ek2"
				android:fontFamily="Font Awesome 5 Free"
				android:textSize="19sp"
				android:textColor="@color/___ek2_color"
				android:layout_marginLeft="328.66931152344dp"
				android:layout_marginTop="11.881149291992dp"
				android:layout_width="24dp"
				android:layout_height="23dp"
				android:text="@string/___ek2_string"
				 />

			<TextView android:id="@+id/___ek3"
				android:fontFamily="Font Awesome 5 Free"
				android:textSize="27sp"
				android:textColor="@color/___ek3_color"
				android:layout_marginLeft="316.68890380859dp"
				android:layout_marginTop="21.792114257812dp"
				android:layout_width="29dp"
				android:layout_height="32dp"
				android:text="@string/___ek3_string"
				 />

			<TextView android:id="@+id/__2"
				android:fontFamily="Roboto"
				android:textSize="11sp"
				android:textColor="@color/__2_color"
				android:layout_marginLeft="338.13763427734dp"
				android:layout_marginTop="14.691116333008dp"
				android:layout_width="11dp"
				android:layout_height="15dp"
				android:text="@string/__2_string"
				 />

			<TextView android:id="@+id/____________4_5___ftcl_______5min_______________________________"
				android:fontFamily="Roboto"
				android:textSize="19sp"
				android:textColor="@color/__2_color"
				android:layout_marginLeft="10.060012817383dp"
				android:layout_marginTop="423.32235717773dp"
				android:layout_width="177dp"
				android:layout_height="63dp"
				android:text="@string/____________4_5___ftcl_______5min________________________________string"
				 />

			<TextView android:id="@+id/____________4_0___midway__20min________________________________1"
				android:fontFamily="Roboto"
				android:textSize="19sp"
				android:textColor="@color/__2_color"
				android:layout_marginLeft="9.1190795898438dp"
				android:layout_marginTop="485.45086669922dp"
				android:layout_width="186dp"
				android:layout_height="63dp"
				android:text="@string/____________4_0___midway__20min________________________________1_string"
				 />

			<ImageView android:id="@+id/rounded_rectangle_4"
				android:src="@drawable/rounded_rectangle_4"
				android:contentDescription="rounded_rectangle_4"
				 android:layout_marginLeft="19.632614135742dp"
				 android:layout_marginStart="19.632614135742dp"
				android:layout_marginTop="552.54943847656dp"
				android:layout_width="320.62866210938dp"
				android:layout_height="55.503173828125dp" />

			<TextView android:id="@+id/start"
				android:fontFamily="Roboto"
				android:textSize="27sp"
				android:textColor="@color/start_color"
				android:layout_marginLeft="140.16018676758dp"
				android:layout_marginTop="561.32684326172dp"
				android:layout_width="87dp"
				android:layout_height="38dp"
				android:text="@string/start_string"
				 />

			<ImageView android:id="@+id/traffic_hover"
				android:src="@drawable/traffic_hover"
				android:contentDescription="traffic_hover"
				 android:layout_marginLeft="300.38275146484dp"
				 android:layout_marginStart="300.38275146484dp"
				android:layout_marginTop="264.888671875dp"
				android:layout_width="40.572265625dp"
				android:layout_height="39.034698486328dp" />

			<ImageView android:id="@+id/rectangle_2"
				android:src="@drawable/rectangle_2"
				android:contentDescription="rectangle_2"
				 android:layout_marginLeft="310.39767456055dp"
				 android:layout_marginStart="310.39767456055dp"
				android:layout_marginTop="270.72528076172dp"
				android:layout_width="18.707641601562dp"
				android:layout_height="26.892242431641dp" />

			<ImageView android:id="@+id/_006699"
				android:src="@drawable/_006699"
				android:contentDescription="_006699"
				 android:layout_marginLeft="174.00415039062dp"
				 android:layout_marginStart="174.00415039062dp"
				android:layout_marginTop="297.89739990234dp"
				android:layout_width="25.138412475586dp"
				android:layout_height="24.553802490234dp" />

			<ImageView android:id="@+id/_663300"
				android:src="@drawable/_663300"
				android:contentDescription="_663300"
				 android:layout_marginLeft="155.30633544922dp"
				 android:layout_marginStart="155.30633544922dp"
				android:layout_marginTop="269.55053710938dp"
				android:layout_width="25.138412475586dp"
				android:layout_height="24.553802490234dp" />

			<ImageView android:id="@+id/__ff3333"
				android:src="@drawable/__ff3333"
				android:contentDescription="__ff3333"
				 android:layout_marginLeft="155.77783203125dp"
				 android:layout_marginStart="155.77783203125dp"
				android:layout_marginTop="228.46810913086dp"
				android:layout_width="24.553802490234dp"
				android:layout_height="23.384567260742dp" />

			<ImageView android:id="@+id/_0099ff"
				android:src="@drawable/_0099ff"
				android:contentDescription="_0099ff"
				 android:layout_marginLeft="190.19268798828dp"
				 android:layout_marginStart="190.19268798828dp"
				android:layout_marginTop="246.41288757324dp"
				android:layout_width="24.553802490234dp"
				android:layout_height="23.969192504883dp" />

			<ImageView android:id="@+id/_663399"
				android:src="@drawable/_663399"
				android:contentDescription="_663399"
				 android:layout_marginLeft="100.57273864746dp"
				 android:layout_marginStart="100.57273864746dp"
				android:layout_marginTop="236.55366516113dp"
				android:layout_width="25.138412475586dp"
				android:layout_height="23.969192504883dp" />

			<ImageView android:id="@+id/rectangle_663300"
				android:src="@drawable/rectangle_663300"
				android:contentDescription="rectangle_663300"
				 android:layout_marginLeft="150.5368347168dp"
				 android:layout_marginStart="150.5368347168dp"
				android:layout_marginTop="129.11578369141dp"
				android:layout_width="59.630661010742dp"
				android:layout_height="26.307647705078dp" />

			<ImageView android:id="@+id/rectangle_663399"
				android:src="@drawable/rectangle_663399"
				android:contentDescription="rectangle_663399"
				 android:layout_marginLeft="246.1854095459dp"
				 android:layout_marginStart="246.1854095459dp"
				android:layout_marginTop="129.11578369141dp"
				android:layout_width="59.630661010742dp"
				android:layout_height="26.307647705078dp" />

			<ImageView android:id="@+id/rectangle_ff9933"
				android:src="@drawable/rectangle_ff9933"
				android:contentDescription="rectangle_ff9933"
				 android:layout_marginLeft="40.06298828125dp"
				 android:layout_marginStart="40.06298828125dp"
				android:layout_marginTop="129.11578369141dp"
				android:layout_width="59.630661010742dp"
				android:layout_height="26.307647705078dp" />

			<ImageView android:id="@+id/rectangle_009999"
				android:src="@drawable/rectangle_009999"
				android:contentDescription="rectangle_009999"
				 android:layout_marginLeft="236.01759338379dp"
				 android:layout_marginStart="236.01759338379dp"
				android:layout_marginTop="173.86410522461dp"
				android:layout_width="59.630661010742dp"
				android:layout_height="26.307647705078dp" />

			<ImageView android:id="@+id/rectangle_006699"
				android:src="@drawable/rectangle_006699"
				android:contentDescription="rectangle_006699"
				 android:layout_marginLeft="79.391723632812dp"
				 android:layout_marginStart="79.391723632812dp"
				android:layout_marginTop="173.86410522461dp"
				android:layout_width="59.630661010742dp"
				android:layout_height="26.307647705078dp" />

			<ImageView android:id="@+id/ff9933"
				android:src="@drawable/ff9933"
				android:contentDescription="ff9933"
				 android:layout_marginLeft="127.55484771729dp"
				 android:layout_marginStart="127.55484771729dp"
				android:layout_marginTop="297.96710205078dp"
				android:layout_width="25.13842010498dp"
				android:layout_height="23.969177246094dp" />

			<TextView android:id="@+id/_____________3_8__moitri___10min________________________________"
				android:fontFamily="Roboto"
				android:textSize="19sp"
				android:textColor="@color/__2_color"
				android:layout_marginLeft="194.12152099609dp"
				android:layout_marginTop="425.35580444336dp"
				android:layout_width="171dp"
				android:layout_height="64dp"
				android:text="@string/_____________3_8__moitri___10min_________________________________string"
				 />

			<TextView android:id="@+id/_____________4_8__atcl____20min_________________________________"
				android:fontFamily="Roboto"
				android:textSize="19sp"
				android:textColor="@color/__2_color"
				android:layout_marginLeft="193.10171508789dp"
				android:layout_marginTop="485.45086669922dp"
				android:layout_width="163dp"
				android:layout_height="63dp"
				android:text="@string/_____________4_8__atcl____20min__________________________________string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>